<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Security Devices</string>
    <!-- LoginActivity -->
    <string name="security_devices">Security Devices</string>
    <string name="assets_management">Assets Management</string>
    <string name="user_id">User ID</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>

    <!-- QRCodeActivity -->
    <string name="qr_code">QR Code</string>

    <!-- CompanyActivity -->
    <string name="select_company">Select a company:</string>
    <string name="new_company">New Company</string>

    <!-- CameraDetailActivity -->
    <string name="camera_informations">Camera Informations:</string>
    <string name="name">Name:</string>
    <string name="camera_name">Camera Name</string>
    <string name="location">Location:</string>
    <string name="camera_location">Camera Location</string>
    <string name="ip_address">IP Address:</string>
    <string name="subnet_mask">Subnet Mask:</string>
    <string name="default_gateway">Default Gateway:</string>
    <string name="username">UserName:</string>
    <string name="camera_username">Camera User Name</string>
    <string name="camera_password">Camera Password</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>

    <string name="search">Search</string>

    <string name="search_camera">Search camera...</string>
    <string name="show_all">Show All</string>
    <string name="new_camera">New Camera</string>

    <string name="add_company_header">Complete all fields to add a new company:</string>
    <string name="company_name">Company Name</string>
    <string name="add_new_company">Add New Company</string>

    <!-- AddCameraActivity -->
    <string name="add_camera_header">Complete all fields to add a new camera:</string>
    <string name="add_camera">Add Camera</string>




</resources>